Fix button visibility across all view modes by removing URL restrictions
- Remove /task/ URL check to allow button injection in any view
- Add URL change listeners (popstate, pushState) for navigation events
- Update manifest to match all Asana pages instead of just task URLs

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "Generate Git branch names from Asana tasks",
   "content_scripts": [
     {
-      "matches": ["*://app.asana.com/*/task/*"],
+      "matches": ["*://app.asana.com/*"],
       "js": ["content/content.js"],
       "css": ["content/styles.css"],
       "run_at": "document_idle"
