--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
       "run_at": "document_idle"
     }
   ],
-  "permissions": ["activeTab"],
+  "permissions": [],
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
